<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollView"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivDetailImage"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:contentDescription="@string/image_description"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/game_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDetailImage" />

        <TextView
            android:id="@+id/tvDetailGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_genre"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvDetailName"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailName" />

        <TextView
            android:id="@+id/tvDetailDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/tvDetailPubPlat"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailPubPlat"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvDetailPubPlat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platform_publisher"
            android:textSize="11sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/tvDetailGenre"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailGenre" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/favorite_fab"
            android:focusable="true"
            android:src="@drawable/ic_not_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/ivDetailImage"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>